// SPDX-License-Identifier: Apache-2.0
//
// This file is unmodified from its original version developed by Acryl Data, Inc.,
// and is now included as part of a repository maintained by the National Digital Twin Programme.
// All support, maintenance and further development of this code is now the responsibility
// of the National Digital Twin Programme.

syntax = "proto3";
package protobuf;

/*
   Test for one of
*/
message MessageC {
  // one of field comment
  oneof one_of_field {
    string one_of_string = 1; // one of string comment
    int32 one_of_int = 2; // one of int comment
  }
  string normal = 4;
}